# linear_regression_42

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs  main.rs  predictor.rs  trainer.rs
